--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "Sanjay gautam",
   "license": "ISC",
   "dependencies": {
-    "moment": "^2.29.3"
+    "chalk": "4.1.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
   }
 }
