--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
 PORT=9000
-DATABASE=mongodb://localhost:27017/
+DATABASE=mongodb+srv://sanjay:iamsanjay@cluster0.ngpsulh.mongodb.net/plzDo?retryWrites=true&w=majority
